--- a/app/src/main/res/layout/fragment_canal_trapecial.xml
+++ b/app/src/main/res/layout/fragment_canal_trapecial.xml
@@ -68,15 +68,14 @@
                     android:id="@+id/TV_B_Trap"
                     android:layout_width="120dp"
                     android:layout_height="48dp"
-                    android:textSize="18sp"
-                    android:layout_toRightOf="@id/TV_H_Trap"
                     android:layout_marginStart="48dp"
                     android:layout_marginLeft="48dp"
-                    android:textColor="@color/azul_perval"
-                    android:gravity="center_horizontal|center_vertical"
+                    android:layout_toRightOf="@id/TV_H_Trap"
                     android:background="@drawable/fondo_text"
+                    android:gravity="center_horizontal|center_vertical"
                     android:text="@string/Text_B_trapecial"
-                    />
+                    android:textColor="@color/azul_perval"
+                    android:textSize="18sp" />
 
                 <EditText
                     android:id="@+id/ET_B_Trap"
