--- a/app/src/main/res/layout/table_manning.xml
+++ b/app/src/main/res/layout/table_manning.xml
@@ -4,21 +4,26 @@
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:layout_gravity="center_horizontal"
+    android:layout_centerHorizontal="true"
     android:background="@drawable/btn_blanco"
     >
 
     <androidx.core.widget.NestedScrollView
+        android:layout_centerInParent="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         android:layout_marginStart="24dp"
         android:layout_centerHorizontal="true"
+        android:fillViewport="true"
         android:scrollbars="horizontal|vertical">
 
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+
             android:layout_gravity="center_horizontal">
         <TextView
             android:id="@+id/Tit_table"
@@ -26,14 +31,18 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:textAlignment="center"
+            android:gravity="center_horizontal"
             android:textColor="@color/azul_perval"
             android:text="@string/Tit_table_manning"/>
 
             <TableLayout
                 android:id="@+id/TLayout_Manning"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
+                android:layout_centerHorizontal="true"
+                android:layout_centerInParent="true"
+
                 android:background="@drawable/formato_tablelayout"
                 android:layout_below="@id/Tit_table"
                 android:layout_marginTop="0dp"
